# DRF_30-33

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.sample  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: admin.py  apps.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_subscription_created_at.py  0005_subscription_is_active.py  0006_course_updated_at.py
nginx/: Dockerfile.txt  nginx.conf
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: payments_data.json  user_data.json
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_link_payments_session_id_and_more.py
